--- Auto-Git Commit ---

--- a/云计算/cuda/1. 入门.md
+++ b/云计算/cuda/1. 入门.md
@@ -5,9 +5,14 @@
     - [2.1 cuda程序执行流程](#21-cuda程序执行流程)
     - [2.2 cuda三个函数类型](#22-cuda三个函数类型)
     - [2.3 kernel线程层次结构](#23-kernel线程层次结构)
-    - [2.4 流式处理器（SM）](#24-流式处理器sm)
+        - [2.3.1 流式处理器（SM）](#231-流式处理器sm)
+    - [2.4 cuda 内存模型](#24-cuda-内存模型)
+    - [2.5 GPU 硬件基本认识](#25-gpu-硬件基本认识)
+        - [2.5.1 硬件配置检查](#251-硬件配置检查)
 
 <!-- /TOC -->
+* reference
+    * https://zhuanlan.zhihu.com/p/34587739
 # 1. 背景
 * 2006年，NVIDIA公司发布了CUDA，CUDA是建立在NVIDIA的GPUs上的一个通用并行计算平台和编程模型，基于CUDA编程可以利用GPUs的并行计算引擎来更加高效地解决比较复杂的计算难题。
 
@@ -57,7 +62,7 @@ dim3 block(5, 3);
 kernel_fun<<< grid, block >>>(prams...);
 ```
 
-## 2.4 流式处理器（SM）
+### 2.3.1 流式处理器（SM）
 * 一个线程块上的线程是放在同一个流式多处理器（SM)上的，但是单个SM的资源有限，这导致线程块中的线程数是有限制的，现代GPUs的线程块可支持的线程数可达1024个。
 
 * 有时候，我们要知道一个线程在blcok中的全局ID，此时就必须还要知道block的组织结构，这是通过线程的内置变量blockDim来获得。它获取线程块各个维度的大小。
@@ -65,3 +70,48 @@ kernel_fun<<< grid, block >>>(prams...);
 * 另外线程还有内置变量gridDim，用于获得网格块各个维度的大小。
 
 kernel的这种线程组织结构天然适合vector,matrix等运算，如我们将利用上图2-dim结构实现两个矩阵的加法，每个线程负责处理每个位置的两个元素相加，代码如下所示。线程块大小为(16, 16)，然后将N*N大小的矩阵均分为不同的线程块来执行加法运算。
+```
+// Kernel定义
+__global__ void MatAdd(float A[N][N], float B[N][N], float C[N][N]) 
+{ 
+    int i = blockIdx.x * blockDim.x + threadIdx.x; 
+    int j = blockIdx.y * blockDim.y + threadIdx.y; 
+    if (i < N && j < N) 
+        C[i][j] = A[i][j] + B[i][j]; 
+}
+int main() 
+{ 
+    ...
+    // Kernel 线程配置
+    dim3 threadsPerBlock(16, 16); 
+    dim3 numBlocks(N / threadsPerBlock.x, N / threadsPerBlock.y);
+    // kernel调用
+    MatAdd<<<numBlocks, threadsPerBlock>>>(A, B, C); 
+    ...
+}
+```
+
+## 2.4 cuda 内存模型
+* 每个线程都有自己私有本地内存，每个线程块有包含共享内存，可以被线程块中所有内存共享，其生命周期与线程块一致
+* 此外所有线程都可以访问全局内存（Global Memory）。还可以访问一些只读内存块：常量内存（Constant Memory）和纹理内存（Texture Memory）
+![](./images/2019-12-09-15-58-52.png)
+
+
+## 2.5 GPU 硬件基本认识
+* 一个kernel 会起很多线程，理论上这些线程是并行运行的的，但是物理层并不一定。
+* 多线程如果没有多核支持，在物理层也是无法实现并行的
+* GPU硬件一个核心硬件组件是SM，Streaming MultiProcessor
+    * SM核心组件包括CUDA核心，共享内存，寄存器等，SM可以并发执行数百个线程，并发能力取决于SM所拥有的资源数
+* 但给一个kernel执行时，它的grid中的线程块被分配到线程块被分配到SM上，一个线程块只能在一个SM上被调度。SM一般可以调度多个线程块，这要看SM本身的能力。
+* 那么有可能一个kernel的各个线程块被分配多个SM，所以grid只是逻辑层，而SM才是执行的物理层。
+* SM采用的是SIMT (Single-Instruction, Multiple-Thread，单指令多线程)架构，基本的执行单元是线程束（wraps)，线程束包含32个线程，这些线程同时执行相同的指令，但是每个线程都包含自己的指令地址计数器和寄存器状态，也有自己独立的执行路径。
+    * 所以尽管线程束中的线程同时从同一程序地址执行，但是可能具有不同的行为，比如遇到了分支结构，一些线程可能进入这个分支，但是另外一些有可能不执行，它们只能死等，因为GPU规定线程束中所有线程在同一周期执行相同的指令，线程束分化会导致性能下降。
+    * 当线程块被划分到某个SM上时，它将进一步划分为多个线程束，因为这才是SM的基本执行单元，但是一个SM同时并发的线程束数是有限的。这是因为资源限制，SM要为每个线程块分配共享内存，而也要为每个线程束中的线程分配独立的寄存器。
+    * 所以SM的配置会影响其所支持的线程块和线程束并发数量
+* 总之，就是网格和线程块只是逻辑划分，一个kernel的所有线程其实在物理层是不一定同时并发的。所以kernel的grid和block的配置不同，性能会出现差异，这点是要特别注意的。
+* 由于SM的基本执行单元是包含32个线程的线程束，所以block大小一般要设置为32的倍数。
+![](./images/2019-12-09-16-17-19.png)
+
+
+### 2.5.1 硬件配置检查
+在进行CUDA编程前，可以先检查一下自己的GPU的硬件配置，这样才可以有的放矢，可以通过下面的程序获得GPU的配置属性：
