--- a/云计算/cuda/1. 入门.md
+++ b/云计算/cuda/1. 入门.md
@@ -9,6 +9,12 @@
     - [2.4 cuda 内存模型](#24-cuda-内存模型)
     - [2.5 GPU 硬件基本认识](#25-gpu-硬件基本认识)
         - [2.5.1 硬件配置检查](#251-硬件配置检查)
+- [3. 简单cuda例子](#3-简单cuda例子)
+    - [3.1 cuda 编程重要API](#31-cuda-编程重要api)
+        - [3.1.1 cudaMalloc](#311-cudamalloc)
+        - [3.1.2 cudaFree](#312-cudafree)
+        - [3.1.3 cudaMemcpy](#313-cudamemcpy)
+    - [3.2 向量相加](#32-向量相加)
 
 <!-- /TOC -->
 * reference
@@ -115,3 +121,179 @@ int main()
 
 ### 2.5.1 硬件配置检查
 在进行CUDA编程前，可以先检查一下自己的GPU的硬件配置，这样才可以有的放矢，可以通过下面的程序获得GPU的配置属性：
+```
+  int dev = 0;
+    cudaDeviceProp devProp;
+    CHECK(cudaGetDeviceProperties(&devProp, dev));
+    std::cout << "使用GPU device " << dev << ": " << devProp.name << std::endl;
+    std::cout << "SM的数量：" << devProp.multiProcessorCount << std::endl;
+    std::cout << "每个线程块的共享内存大小：" << devProp.sharedMemPerBlock / 1024.0 << " KB" << std::endl;
+    std::cout << "每个线程块的最大线程数：" << devProp.maxThreadsPerBlock << std::endl;
+    std::cout << "每个EM的最大线程数：" << devProp.maxThreadsPerMultiProcessor << std::endl;
+    std::cout << "每个EM的最大线程束数：" << devProp.maxThreadsPerMultiProcessor / 32 << std::endl;
+
+    // 输出如下
+    使用GPU device 0: GeForce GT 730
+    SM的数量：2
+    每个线程块的共享内存大小：48 KB
+    每个线程块的最大线程数：1024
+    每个EM的最大线程数：2048
+    每个EM的最大线程束数：64
+```
+
+
+# 3. 简单cuda例子
+## 3.1 cuda 编程重要API
+### 3.1.1 cudaMalloc
+* 在device上分配内存的cudaMalloc函数
+    * 这个函数和C语言中的malloc类似，但是在device上申请一定字节大小的显存，其中devPtr是指向所分配内存的指针。
+```
+cudaError_t cudaMalloc(void** devPtr, size_t size);
+```
+
+### 3.1.2 cudaFree
+* 释放分配的内存使用cudaFree函数
+
+### 3.1.3 cudaMemcpy
+* 负责host和device之间数据通信
+```
+cudaError_t cudaMemcpy(void* dst, const void* src, size_t count, cudaMemcpyKind kind)
+```
+* src指向数据源，而dst是目标区域，count是复制的字节数，其中kind控制复制的方向(cudaMemcpyHostToHost, cudaMemcpyHostToDevice, cudaMemcpyDeviceToHost及cudaMemcpyDeviceToDevice)
+
+
+## 3.2 向量相加
+* 这里grid和block都设计为1-dim，首先定义kernel如下
+```
+// 两个向量加法kernel，grid和block均为一维
+__global__ void add(float* x, float * y, float* z, int n)
+{
+    // 获取全局索引
+    int index = threadIdx.x + blockIdx.x * blockDim.x;
+    // 步长
+    int stride = blockDim.x * gridDim.x;
+    for (int i = index; i < n; i += stride)
+    {
+        z[i] = x[i] + y[i];
+    }
+}
+```
+* 其中stride是整个grid的线程数，有时候向量的元素数很多，这时候可以将在每个线程实现多个元素（元素总数/线程总数）的加法
+* 不过下面的例子一个线程只处理一个元素，所以kernel里面的循环是不执行的。下面我们具体实现向量加法：
+```
+int main()
+{
+    int N = 1 << 20;
+    int nBytes = N * sizeof(float);
+    // 申请host内存
+    float *x, *y, *z;
+    x = (float*)malloc(nBytes);
+    y = (float*)malloc(nBytes);
+    z = (float*)malloc(nBytes);
+
+    // 初始化数据
+    for (int i = 0; i < N; ++i)
+    {
+        x[i] = 10.0;
+        y[i] = 20.0;
+    }
+
+    // 申请device内存
+    float *d_x, *d_y, *d_z;
+    cudaMalloc((void**)&d_x, nBytes);
+    cudaMalloc((void**)&d_y, nBytes);
+    cudaMalloc((void**)&d_z, nBytes);
+
+    // 将host数据拷贝到device
+    cudaMemcpy((void*)d_x, (void*)x, nBytes, cudaMemcpyHostToDevice);
+    cudaMemcpy((void*)d_y, (void*)y, nBytes, cudaMemcpyHostToDevice);
+    // 定义kernel的执行配置
+    dim3 blockSize(256);
+    dim3 gridSize((N + blockSize.x - 1) / blockSize.x);
+    // 执行kernel
+    add << < gridSize, blockSize >> >(d_x, d_y, d_z, N);
+
+    // 将device得到的结果拷贝到host
+    cudaMemcpy((void*)z, (void*)d_z, nBytes, cudaMemcpyHostToDevice);
+
+    // 检查执行结果
+    float maxError = 0.0;
+    for (int i = 0; i < N; i++)
+        maxError = fmax(maxError, fabs(z[i] - 30.0));
+    std::cout << "最大误差: " << maxError << std::endl;
+
+    // 释放device内存
+    cudaFree(d_x);
+    cudaFree(d_y);
+    cudaFree(d_z);
+    // 释放host内存
+    free(x);
+    free(y);
+    free(z);
+
+    return 0;
+}
+```
+* 这里我们的向量大小为1<<20，而block大小为256，那么grid大小是4096，kernel的线程层级结构如下图所示：
+![](./images/2019-12-09-16-44-01.png)
+
+* 使用nvprof工具可以分析kernel运行情况，结果如下所示，可以看到kernel函数费时约1.5ms。
+```
+nvprof cuda9.exe
+==7244== NVPROF is profiling process 7244, command: cuda9.exe
+最大误差: 4.31602e+008
+==7244== Profiling application: cuda9.exe
+==7244== Profiling result:
+            Type  Time(%)      Time     Calls       Avg       Min       Max  Name
+ GPU activities:   67.57%  3.2256ms         2  1.6128ms  1.6017ms  1.6239ms  [CUDA memcpy HtoD]
+                   32.43%  1.5478ms         1  1.5478ms  1.5478ms  1.5478ms  add(float*, float*, float*, int)
+```
+
+* 你调整block的大小，对比不同配置下的kernel运行情况，我这里测试的是当block为128时，kernel费时约1.6ms，而block为512时kernel费时约1.7ms，当block为64时，kernel费时约2.3ms。看来不是block越大越好，而要适当选择。
+
+* 在上面的实现中，我们需要单独在host和device上进行内存分配，并且要进行数据拷贝，这是很容易出错的。好在CUDA 6.0引入统一内存（Unified Memory）来避免这种麻烦，简单来说就是统一内存使用一个托管内存来共同管理host和device中的内存，并且自动在host和device中进行数据传输。
+    ```
+    cudaError_t cudaMallocManaged(void **devPtr, size_t size, unsigned int flag=0);
+    ```
+    * 利用统一内存，可以将上面的程序简化如下：
+    ```
+        int main()
+        {
+            int N = 1 << 20;
+            int nBytes = N * sizeof(float);
+
+            // 申请托管内存
+            float *x, *y, *z;
+            cudaMallocManaged((void**)&x, nBytes);
+            cudaMallocManaged((void**)&y, nBytes);
+            cudaMallocManaged((void**)&z, nBytes);
+
+            // 初始化数据
+            for (int i = 0; i < N; ++i)
+            {
+                x[i] = 10.0;
+                y[i] = 20.0;
+            }
+
+            // 定义kernel的执行配置
+            dim3 blockSize(256);
+            dim3 gridSize((N + blockSize.x - 1) / blockSize.x);
+            // 执行kernel
+            add << < gridSize, blockSize >> >(x, y, z, N);
+
+            // 同步device 保证结果能正确访问
+            cudaDeviceSynchronize();
+            // 检查执行结果
+            float maxError = 0.0;
+            for (int i = 0; i < N; i++)
+                maxError = fmax(maxError, fabs(z[i] - 30.0));
+            std::cout << "最大误差: " << maxError << std::endl;
+
+            // 释放内存
+            cudaFree(x);
+            cudaFree(y);
+            cudaFree(z);
+
+            return 0;
+        }
+    ```
