--- a/云计算/cuda/1. 入门.md
+++ b/云计算/cuda/1. 入门.md
@@ -15,6 +15,7 @@
         - [3.1.2 cudaFree](#312-cudafree)
         - [3.1.3 cudaMemcpy](#313-cudamemcpy)
     - [3.2 向量相加](#32-向量相加)
+    - [3.3 矩阵相乘](#33-矩阵相乘)
 
 <!-- /TOC -->
 * reference
@@ -256,6 +257,7 @@ nvprof cuda9.exe
     cudaError_t cudaMallocManaged(void **devPtr, size_t size, unsigned int flag=0);
     ```
     * 利用统一内存，可以将上面的程序简化如下：
+        * 值得注意的是kernel执行是与host异步的，由于托管内存自动进行数据传输，这里要用cudaDeviceSynchronize()函数保证device和host同步，这样后面才可以正确访问kernel计算的结果。
     ```
         int main()
         {
@@ -297,3 +299,124 @@ nvprof cuda9.exe
             return 0;
         }
     ```
+
+
+## 3.3 矩阵相乘
+两个矩阵的乘法，设输入矩阵为 A 和 B，要得到 C=A*B 。实现思路是每个线程计算 C 的一个元素值 Cij ，对于矩阵运算，应该选用grid和block为2-D的
+
+
+* 首先定义矩阵的结构体
+```
+// 矩阵类型，行优先，M(row, col) = *(M.elements + row * M.width + col)
+struct Matrix
+{
+    int width;
+    int height;
+    float *elements;
+};
+```
+![](./images/2019-12-09-16-53-11.png)
+
+* 然后实现矩阵乘法的核函数，这里我们定义了两个辅助的__device__函数分别用于获取矩阵的元素值和为矩阵元素赋值，具体代码如下：
+```
+// 获取矩阵A的(row, col)元素
+__device__ float getElement(Matrix *A, int row, int col)
+{
+	return A->elements[row * A->width + col];
+}
+
+// 为矩阵A的(row, col)元素赋值
+__device__ void setElement(Matrix *A, int row, int col, float value)
+{
+	A->elements[row * A->width + col] = value;
+}
+
+// 矩阵相乘kernel，2-D，每个线程计算一个元素
+__global__ void matMulKernel(Matrix *A, Matrix *B, Matrix *C)
+{
+	float Cvalue = 0.0;
+	int row = threadIdx.y + blockIdx.y * blockDim.y;
+	int col = threadIdx.x + blockIdx.x * blockDim.x;
+	for (int i = 0; i < A->width; ++i)
+	{
+		Cvalue += getElement(A, row, i) * getElement(B, i, col);
+	}
+	setElement(C, row, col, Cvalue);
+}
+```
+
+* 最后我们采用统一内存编写矩阵相乘的测试实例：
+```
+int main()
+{
+    int width = 1 << 10;
+    int height = 1 << 10;
+    Matrix *A, *B, *C;
+    // 申请托管内存
+    cudaMallocManaged((void**)&A, sizeof(Matrix));
+    cudaMallocManaged((void**)&B, sizeof(Matrix));
+    cudaMallocManaged((void**)&C, sizeof(Matrix));
+    int nBytes = width * height * sizeof(float);
+    cudaMallocManaged((void**)&A->elements, nBytes);
+    cudaMallocManaged((void**)&B->elements, nBytes);
+    cudaMallocManaged((void**)&C->elements, nBytes);
+
+    // 初始化数据
+    A->height = height;
+    A->width = width;
+    B->height = height;
+    B->width = width;
+    C->height = height;
+    C->width = width;
+    for (int i = 0; i < width * height; ++i)
+    {
+        A->elements[i] = 1.0;
+        B->elements[i] = 2.0;
+    }
+
+    // 定义kernel的执行配置
+    dim3 blockSize(32, 32);
+    dim3 gridSize((width + blockSize.x - 1) / blockSize.x, 
+        (height + blockSize.y - 1) / blockSize.y);
+    // 执行kernel
+    matMulKernel << < gridSize, blockSize >> >(A, B, C);
+
+
+    // 同步device 保证结果能正确访问
+    cudaDeviceSynchronize();
+    // 检查执行结果
+    float maxError = 0.0;
+    for (int i = 0; i < width * height; ++i)
+        maxError = fmax(maxError, fabs(C->elements[i] - 2 * width));
+    std::cout << "最大误差: " << maxError << std::endl;
+
+    return 0;
+}
+```
+
+* 这里矩阵大小为，设计的线程的block大小为(32, 32)，那么grid大小为(32, 32)，最终测试结果如下：
+```
+nvprof cuda9.exe
+==16304== NVPROF is profiling process 16304, command: cuda9.exe
+最大误差: 0
+==16304== Profiling application: cuda9.exe
+==16304== Profiling result:
+            Type  Time(%)      Time     Calls       Avg       Min       Max  Name
+ GPU activities:  100.00%  1.32752s         1  1.32752s  1.32752s  1.32752s  matMulKernel(Matrix*, Matrix*, Matrix*)
+      API calls:   83.11%  1.32762s         1  1.32762s  1.32762s  1.32762s  cudaDeviceSynchronize
+                   13.99%  223.40ms         6  37.233ms  37.341us  217.66ms  cudaMallocManaged
+                    2.81%  44.810ms         1  44.810ms  44.810ms  44.810ms  cudaLaunch
+                    0.08%  1.3300ms        94  14.149us       0ns  884.64us  cuDeviceGetAttribute
+                    0.01%  199.03us         1  199.03us  199.03us  199.03us  cuDeviceGetName
+                    0.00%  10.009us         1  10.009us  10.009us  10.009us  cuDeviceTotalMem
+                    0.00%  6.5440us         1  6.5440us  6.5440us  6.5440us  cudaConfigureCall
+                    0.00%  3.0800us         3  1.0260us     385ns  1.5400us  cudaSetupArgument
+                    0.00%  2.6940us         3     898ns     385ns  1.5390us  cuDeviceGetCount
+                    0.00%  1.9250us         2     962ns     385ns  1.5400us  cuDeviceGet
+
+==16304== Unified Memory profiling result:
+Device "GeForce GT 730 (0)"
+   Count  Avg Size  Min Size  Max Size  Total Size  Total Time  Name
+    2051  4.0000KB  4.0000KB  4.0000KB  8.011719MB  21.20721ms  Host To Device
+     270  45.570KB  4.0000KB  1.0000MB  12.01563MB  7.032508ms  Device To Host
+```
