--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/4.复合数据类型.md
@@ -198,6 +198,7 @@ fmt.printf("%s\n",data)
     2019-11-21-15-02-34.png)
 
 ## 6.2 Json转化成golang 类型
-
+* 和前面一样，即使json字符首字母不是大写的，对应golang结构体必须是首字符大写。
+* unmarshal阶段，json字段名称关联到go结构体成员的名称是忽略大小写的，因此这里只需要早JSON中有下划线而go里面没有下划线的时候使用成员标签定义
 
 
