--- Auto-Git Commit ---

--- a/编程语言/Git/社区基础知识/2. 贡献代码到开源社区的那些事.md
+++ b/编程语言/Git/社区基础知识/2. 贡献代码到开源社区的那些事.md
@@ -43,9 +43,11 @@
 * 首先一般系统开发人员会自动/ok-to-test，然后代码进入测试流程。如果发现很长时间没有出现/ok-to-test,可以assing 你的PR到社区成员/assign @gaocegege
 * 下面是代码审核流程
     * cla/google 很快通过，只要之前cla认证没有问题
+    ![](./images/2019-12-11-11-18-22.png)
     * continuous-integration/travis-ci/pr：CI build，一般本地build没出现问题，这不也没什么问题
     * kubeflow-pytorch-operator-presubmit： 这个是开始执行测试用例，有时候即使本地项目测试全都通过，但是该项还是不会通过，因为社区项目可能更新了
         * 这时候需要merge下自己github 项目代码（从开源社区上merge）。merge
         ![](./images/2019-12-11-11-23-48.png)
-![](./images/2019-12-11-11-18-22.png)
+    * tide：就是和
+
 
