--- Auto-Git Commit ---

--- a/编程语言/Git/社区基础知识/2. 贡献代码到开源社区的那些事.md
+++ b/编程语言/Git/社区基础知识/2. 贡献代码到开源社区的那些事.md
@@ -48,6 +48,7 @@
     * kubeflow-pytorch-operator-presubmit： 这个是开始执行测试用例，有时候即使本地项目测试全都通过，但是该项还是不会通过，因为社区项目可能更新了
         * 这时候需要merge下自己github 项目代码（从开源社区上merge）。merge
         ![](./images/2019-12-11-11-23-48.png)
-    * tide：就是和
+    * tide：就是和社区成员讨论协商过程，如果最终同意接受你的代码，那么一个contributor就可以了
+
 
 
