--- Auto-Git Commit ---

--- a/编程语言/shell/Shell 常用用法/3. user、group和权限.md
+++ b/编程语言/shell/Shell 常用用法/3. user、group和权限.md
@@ -6,5 +6,16 @@
 
 <!-- /TOC -->
 # 1. user 
+
 # 2. group
+* 创建group
+    * groupadd  test
+* 修改group
+    * groupmod -n test2  test（将test组的名子改成test2）
+* 删除组
+    * groupdel test2
+* 查看组
+    * groups （查看当前用户所在的组）
+    * groups apacheuser （查看指定用户）
+    * cat /etc/group （查看所有组）
 # 3. 权限
