--- a/编程语言/shell/Shell 常用用法/3. user、group和权限.md
+++ b/编程语言/shell/Shell 常用用法/3. user、group和权限.md
@@ -6,6 +6,11 @@
 
 <!-- /TOC -->
 # 1. user 
+* useradd test（添加用户，新增用户之后需要为用户添加密码，否则账号不能登录）
+* passwd test （为用户添加密码）
+* usermod -d /home/test -G test2 test（将test用户的登录目录改成/home/test，并加入test2组，注意这里是大G。）
+* gpasswd -a test test2 将用户test加入到test2组
+* gpasswd -d test test2 将用户test从test2组中移出
 
 # 2. group
 * 创建group
