--- Auto-Git Commit ---

--- a/docker/2. 常见问题.md
+++ b/docker/2. 常见问题.md
@@ -8,3 +8,10 @@ Failed to pull image "gcr.io/kubeflow-images-public/ingress-setup:latest": rpc e
 echo '{ "insecure-registries":["k8s.gcr.io","gcr.io","quay.io"] }' > /etc/docker/daemon.json
 systemctl restart docker.service
 ```
+
+# 2. docker 镜像迁移
+## 2.1 问题描述
+之前在OpenStack虚机中搭建k8s，默认/目录挂载磁盘空间就50G，而docker images镜像一般都很大，时间久了之后，磁盘容量超过水位值，k8s开始杀pod。
+虽然调高了水位值短时间能避免杀pod，但是比较稳妥的方法是新挂载一块盘，然后迁移docker 文件。
+
+## 2.2 迁移docker 文件过程
