--- Auto-Git Commit ---

--- a/docker/2. 常见问题.md
+++ b/docker/2. 常见问题.md
@@ -15,3 +15,29 @@ systemctl restart docker.service
 虽然调高了水位值短时间能避免杀pod，但是比较稳妥的方法是新挂载一块盘，然后迁移docker 文件。
 
 ## 2.2 迁移docker 文件过程
+### 2.2.1 查看docker 基本信息
+* docker info
+    * 一般docker 根目录在/var/lib/docker,但是具体的可以使用docker info 查看
+```
+Docker Root Dir: /var/lib/docker
+```
+
+### 2.2.2  迁移过程
+* systemctl stop docker
+* mkdir -p /data/modules/docker/lib/ （创建新的根路径）
+* mv /var/lib/docker /data/modules/docker/lib/ （因此新的root 路径是/home/modules/docker/lib/docker）
+* vi /etc/systemd/system/docker.service.d/devicemapper.conf（如果没有该路径，就创建）
+    ```
+    [Service]
+    ExecStart=
+    ExecStart=/usr/bin/dockerd  --graph=/data/modules/docker/lib/docker
+    ```
+
+* 重启docker
+    * systemctl daemon-reload
+    * systemctl restart docker
+    * systemctl enable docker
+* 确认docker 信息
+    * docker info ，根路径是否发生变化
+* 确认镜像是否还存在
+    * docker images
