--- Auto-Git Commit ---

--- a/编程语言/shell/Shell 常用用法/5. sort.md
+++ b/编程语言/shell/Shell 常用用法/5. sort.md
@@ -3,6 +3,8 @@
 - [1. sort 语法](#1-sort-语法)
     - [1.1 重要参数](#11-重要参数)
     - [1.2 example](#12-example)
+- [2.  重要例子](#2--重要例子)
+    - [2.1 对当前文件夹所有文件和文件大小进行排序](#21-对当前文件夹所有文件和文件大小进行排序)
 
 <!-- /TOC -->
 # 1. sort 语法
@@ -20,3 +22,45 @@
 
 ## 1.2 example
 * sort -r sort.txt 倒序排列
+* sort -k 3 -t : sort.txt 对第三列排序，分隔符是：
+
+# 2.  重要例子
+## 2.1 对当前文件夹所有文件和文件大小进行排序
+* 首先ls -l
+    ```
+    [root@host-10-5-8-199 wanlei]# ls -l
+    total 8112
+    -rw-r--r-- 1 root root     994 Oct 29 19:29 crd.yaml
+    -rwxr-xr-x 1 root root  275456 Nov 19 09:47 cuda-add.exe
+    -rw-r--r-- 1 root root 8003732 May 25  2017 httpbeat-4.0.0-linux-x86_64.tar.gz
+    -rw-r--r-- 1 root root    1148 Dec  9 20:03 parrots_job_mnist_nccl.yaml
+    -rw-r--r-- 1 root root     124 Oct 27 14:12 podgroup.yaml
+    -rw-r--r-- 1 root root     996 Oct 29 20:01 pycrd.yaml
+    -rw-r--r-- 1 root root     828 Oct 29 20:17 pyjob.yaml
+    ```
+
+* 我们发现size在第5列，分隔符可以是\t
+    * ls -l | sort -k 5 -t \t
+    ```
+    -rw-r--r-- 1 root root     124 Oct 27 14:12 podgroup.yaml
+    -rw-r--r-- 1 root root     828 Oct 29 20:17 pyjob.yaml
+    -rw-r--r-- 1 root root     994 Oct 29 19:29 crd.yaml
+    -rw-r--r-- 1 root root     996 Oct 29 20:01 pycrd.yaml
+    -rwxr-xr-x 1 root root  275456 Nov 19 09:47 cuda-add.exe
+    total 8112
+    -rw-r--r-- 1 root root    1148 Dec  9 20:03 parrots_job_mnist_nccl.yaml
+    -rw-r--r-- 1 root root 8003732 May 25  2017 httpbeat-4.0.0-linux-x86_64.tar.gz
+    ```
+
+* 有很多不必要信息，并且单位是kb不是很好看
+    * ls -l | awk '{print $5/1024" M\t"$9}' | sort
+    ```
+    0 M
+    0.121094 M	podgroup.yaml
+    0.808594 M	pyjob.yaml
+    0.970703 M	crd.yaml
+    0.972656 M	pycrd.yaml
+    1.12109 M	parrots_job_mnist_nccl.yaml
+    269 M	cuda-add.exe
+    7816.14 M	httpbeat-4.0.0-linux-x86_64.tar.gz
+    ```
