--- Auto-Git Commit ---

--- a/编程语言/shell/Shell 常用用法/3. user、group和权限.md
+++ b/编程语言/shell/Shell 常用用法/3. user、group和权限.md
@@ -3,6 +3,9 @@
 - [1. user](#1-user)
 - [2. group](#2-group)
 - [3. 权限](#3-权限)
+    - [3.1 chown](#31-chown)
+        - [3.1.1 查看权限](#311-查看权限)
+        - [3.1.2 修改权限](#312-修改权限)
 
 <!-- /TOC -->
 # 1. user 
@@ -40,3 +43,25 @@
     * groups apacheuser （查看指定用户）
     * cat /etc/group （查看所有组）
 # 3. 权限
+## 3.1 chown 
+### 3.1.1 查看权限
+* ls -l 查看文件权限
+    * rwx 三个字符不用解释
+    * d 代表目录
+    * rwx的三列分别代表：文件所属者权限、用户所属组用户权限、其它用户权限
+    * 权限后面的数字1表示文件链接数
+    
+```
+-rw-r--r-- 1 root root     994 Oct 29 19:29 crd.yaml
+-rwxr-xr-x 1 root root  275456 Nov 19 09:47 cuda-add.exe
+-rw-r--r-- 1 root root 8003732 May 25  2017 httpbeat-4.0.0-linux-x86_64.tar.gz
+-rw-r--r-- 1 root root    1148 Dec  9 20:03 parrots_job_mnist_nccl.yaml
+-rw-r--r-- 1 root root     124 Oct 27 14:12 podgroup.yaml
+-rw-r--r-- 1 root root     996 Oct 29 20:01 pycrd.yaml
+-rw-r--r-- 1 root root     828 Oct 29 20:17 pyjob.yaml
+```
+
+### 3.1.2 修改权限
+* chown myuser myfile: 把myfile所有者改为myuser
+* sudo chown :mygroup myfile： 把myfile所属组改为mygroup
+* chown myuser:mygroup myfile
