--- Auto-Git Commit ---

--- a/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
+++ b/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
@@ -1,8 +1,30 @@
 <!-- TOC -->
 
 - [1. 背景](#1-背景)
+- [2. 系统调用过程](#2-系统调用过程)
+    - [2.1 系统调用的定义和实现位置](#21-系统调用的定义和实现位置)
+        - [2.1.1](#211)
 
 <!-- /TOC -->
 # 1. 背景
 * ReactOS 项目目标是开发出一个开源的Windows，不言而喻，他要实现的系统调用就是Windows那一套系统调用
-* 本文要说的是ReactOS怎样实现系统调用，也就是用户
+* 本文要说的是ReactOS怎样实现系统调用，也就是用户应用程序怎样进入和退出内核，实现系统调用
+
+
+# 2. 系统调用过程
+* 下面以系统调用NtReadFile()为例，按“自顶向下”的方式，一方面说明如何阅读ReactOS源代码，一方面说明ReacOS如何实现系统调用。
+
+
+## 2.1 系统调用的定义和实现位置
+* Windows应用程序库都应该通过Win32API调用这个接口定义的所有库函数，这个库函数基本上在“动态链接库”即DLL中实现。
+* 比如ReadFile()是Wine32 API 所定义的一个库函数，其实现在kernel32.dll库中，定义在winbase.h文件中
+
+### 2.1.1 
+```
+WINBASEAPI BOOL WINAPI ReadFile(
+    IN HANDLE hFile,
+    OUT LPVOID lpBuffer,
+    IN DWORD nNumberOfBytesToRead, OUT LPDWORD lpNumberOfBytesRead, IN LPOVERLAPPED lpOverlapped
+)
+
+```
