--- Auto-Git Commit ---

--- a/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
+++ b/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
@@ -3,7 +3,7 @@
 - [1. 背景](#1-背景)
 - [2. 系统调用过程](#2-系统调用过程)
     - [2.1 系统调用的定义和实现位置](#21-系统调用的定义和实现位置)
-        - [2.1.1](#211)
+        - [2.1.1 ReadFile](#211-readfile)
 
 <!-- /TOC -->
 # 1. 背景
@@ -19,12 +19,20 @@
 * Windows应用程序库都应该通过Win32API调用这个接口定义的所有库函数，这个库函数基本上在“动态链接库”即DLL中实现。
 * 比如ReadFile()是Wine32 API 所定义的一个库函数，其实现在kernel32.dll库中，定义在winbase.h文件中
 
-### 2.1.1 
+### 2.1.1 ReadFile
+*  ReadFile在Windows 中定义
 ```
 WINBASEAPI BOOL WINAPI ReadFile(
     IN HANDLE hFile,
     OUT LPVOID lpBuffer,
     IN DWORD nNumberOfBytesToRead, OUT LPDWORD lpNumberOfBytesRead, IN LPOVERLAPPED lpOverlapped
 )
-
 ```
+* ReactOS 代码同样有winbase.h，这里在目录reactos/w32api/include中
+```
+BOOL WINAPI ReadFile(HANDLE, PVOID, DWORD, PDWORD, LPOVERLAPPED);
+```
+
+* ReadFile 实现
+微软没有开源这个函数代码，ReactOS为之提供了一个开源实现，代码在reactos/lib/kernel32/file/rw.c
+
