--- Auto-Git Commit ---

--- a/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
+++ b/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
@@ -3,7 +3,9 @@
 - [1. 背景](#1-背景)
 - [2. 系统调用过程](#2-系统调用过程)
     - [2.1 系统调用的定义和实现位置](#21-系统调用的定义和实现位置)
-        - [2.1.1 ReadFile](#211-readfile)
+    - [2.2 源码分析](#22-源码分析)
+        - [2.2.1 ReadFile](#221-readfile)
+        - [2.2.2 NtReadFile](#222-ntreadfile)
 
 <!-- /TOC -->
 # 1. 背景
@@ -19,7 +21,8 @@
 * Windows应用程序库都应该通过Win32API调用这个接口定义的所有库函数，这个库函数基本上在“动态链接库”即DLL中实现。
 * 比如ReadFile()是Wine32 API 所定义的一个库函数，其实现在kernel32.dll库中，定义在winbase.h文件中
 
-### 2.1.1 ReadFile
+## 2.2 源码分析
+### 2.2.1 ReadFile
 *  ReadFile在Windows 中定义
 ```
 WINBASEAPI BOOL WINAPI ReadFile(
@@ -35,4 +38,20 @@ BOOL WINAPI ReadFile(HANDLE, PVOID, DWORD, PDWORD, LPOVERLAPPED);
 
 * ReadFile 实现
 微软没有开源这个函数代码，ReactOS为之提供了一个开源实现，代码在reactos/lib/kernel32/file/rw.c
+![](./images/2019-12-13-10-54-17.png)
 
+
+
+
+### 2.2.2 NtReadFile
+* NtReadFile()是Windows的一个系统调用，它的实现在ntoskrnl.exe(这是window内核核心部分)
+* ReactOS代码中内核函数NtReadFile()的定义在reactos/include/nots/zw.h中，同样的定义也出现在reactos/w32api/include/ddk/winddk.h:
+![](./images/2019-12-13-11-03-52.png)
+
+* 相应的实现在reactos/ntoskrnl/io/rw.c
+    * 问题在于NtReadFile()实现在内核空间中，用户程序是如何调用内核空间代码的？
+    * 因此这里面一定另外存在奥妙
+* 作者发现，还有另外一个NtReadFile(),在msvc6/iface/native/syscall/Debug/zw.c
+    ![](./images/2019-12-13-11-09-37.png)
+    * 用户空间也存在NtFileRead()函数，正是这个函数执行
+    
