--- a/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
+++ b/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
@@ -53,5 +53,10 @@ BOOL WINAPI ReadFile(HANDLE, PVOID, DWORD, PDWORD, LPOVERLAPPED);
     * 因此这里面一定另外存在奥妙
 * 作者发现，还有另外一个NtReadFile(),在msvc6/iface/native/syscall/Debug/zw.c
     ![](./images/2019-12-13-11-09-37.png)
-    * 用户空间也存在NtFileRead()函数，正是这个函数执行
-    
+    * 用户空间也存在NtFileRead()函数，正是这个函数执行自陷阱指令“int 0x2e”，下面我们分析下上面的汇编代码：
+        * 152 是NtReadFile()这个系统调用的调用号，所以当CPU自陷阱进入到系统空间后，eax持有具体的系统调用号
+        * 寄存器edx执行lea这条指令后，则持有CPU在调用这个函数前夕的堆栈指针，实际上就是指向堆栈中调用参数的起点
+        * (在系统调用如何传递参数这个问题上，Windows和Linux有着明显的差别，Linux是通寄存器传递参数的，Windows则是通过堆栈传递，这样的直接结果是，Linux 参数传递受寄存器限制，因此linux系统调用参数一般都很少，如果有很多参数需要传递，一般都是先经过struct封装，然后传递struct指针)
+        * 堆栈中参数目前任然是存在用户空间，进入系统调用后参数需要变成内核堆栈，因此需要使用copy_from_user()一类的函数吧这些参数从用户空间拷贝过来，此时edx值就可以作为源指针
+        * ebp用户调用这个函数的“堆栈框架”指针
+        * 当内核完成具体系统调用操作，然后指令ret 9使得cpu返回上一层函数，同时调整堆栈指针，使其跳过堆栈中的9个调用参数    
