--- Auto-Git Commit ---

--- a/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
+++ b/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
@@ -59,4 +59,12 @@ BOOL WINAPI ReadFile(HANDLE, PVOID, DWORD, PDWORD, LPOVERLAPPED);
         * (在系统调用如何传递参数这个问题上，Windows和Linux有着明显的差别，Linux是通寄存器传递参数的，Windows则是通过堆栈传递，这样的直接结果是，Linux 参数传递受寄存器限制，因此linux系统调用参数一般都很少，如果有很多参数需要传递，一般都是先经过struct封装，然后传递struct指针)
         * 堆栈中参数目前任然是存在用户空间，进入系统调用后参数需要变成内核堆栈，因此需要使用copy_from_user()一类的函数吧这些参数从用户空间拷贝过来，此时edx值就可以作为源指针
         * ebp用户调用这个函数的“堆栈框架”指针
-        * 当内核完成具体系统调用操作，然后指令ret 9使得cpu返回上一层函数，同时调整堆栈指针，使其跳过堆栈中的9个调用参数    
+        * 当内核完成具体系统调用操作，然后指令ret 9使得cpu返回上一层函数，同时调整堆栈指针，使其跳过堆栈中的9个调用参数
+
+    * 当CPU从子程序返回时，由谁负责从堆栈中清除这些参数呢？要么是调用者负责，要么由被掉者负责，这里需要一个约定，使得调用者和被调者取得一致
+        * 在上面的NtReadFile()这个函数中，我们看到是由被调者负责、在调整堆栈指针
+        * 函数钱加上__stdcall就说明了这点
+        * 另外函数调用的参数是3个而不是9个，作者在分析代码之后发现这三个参数根本没有被使用到，而前面的ReadFile()使用的参数也是9个，这里的三个参数完全是虚设的，难怪代码中称之为“dummy”
+    * 用户空间的NtReadFile()向上代表内核函数NtReadFile(),向下代表要调用内核函数NtReadFile(),这里的ReadFile()。但是本身没有提供什么附加功能，这样的中间函数称为“stub”
+
+    * ReactOS这种做法容易让读者迷茫，相比之下，Linux的做法就比较清晰，比如需要调用的库函数是wriet（），内核中对应的库函数就是sys_write()    
