--- Auto-Git Commit ---

--- a/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
+++ b/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
@@ -6,6 +6,9 @@
     - [2.2 源码分析](#22-源码分析)
         - [2.2.1 ReadFile](#221-readfile)
         - [2.2.2 NtReadFile](#222-ntreadfile)
+            - [2.2.2.1 用户空间也存在NtReadFile函数](#2221-用户空间也存在ntreadfile函数)
+            - [2.2.2.2 stub函数自动生成的原理](#2222-stub函数自动生成的原理)
+            - [2.2.2.3 int0x2e中断向量](#2223-int0x2e中断向量)
 
 <!-- /TOC -->
 # 1. 背景
@@ -51,6 +54,7 @@ BOOL WINAPI ReadFile(HANDLE, PVOID, DWORD, PDWORD, LPOVERLAPPED);
 * 相应的实现在reactos/ntoskrnl/io/rw.c
     * 问题在于NtReadFile()实现在内核空间中，用户程序是如何调用内核空间代码的？
     * 因此这里面一定另外存在奥妙
+#### 2.2.2.1 用户空间也存在NtReadFile函数
 * 作者发现，还有另外一个NtReadFile(),在msvc6/iface/native/syscall/Debug/zw.c
     ![](./images/2019-12-13-11-09-37.png)
     * 用户空间也存在NtFileRead()函数，正是这个函数执行自陷阱指令“int 0x2e”，下面我们分析下上面的汇编代码：
@@ -67,4 +71,28 @@ BOOL WINAPI ReadFile(HANDLE, PVOID, DWORD, PDWORD, LPOVERLAPPED);
         * 另外函数调用的参数是3个而不是9个，作者在分析代码之后发现这三个参数根本没有被使用到，而前面的ReadFile()使用的参数也是9个，这里的三个参数完全是虚设的，难怪代码中称之为“dummy”
     * 用户空间的NtReadFile()向上代表内核函数NtReadFile(),向下代表要调用内核函数NtReadFile(),这里的ReadFile()。但是本身没有提供什么附加功能，这样的中间函数称为“stub”
 
-    * ReactOS这种做法容易让读者迷茫，相比之下，Linux的做法就比较清晰，比如需要调用的库函数是wriet（），内核中对应的库函数就是sys_write()    
+    * ReactOS这种做法容易让读者迷茫，相比之下，Linux的做法就比较清晰，比如需要调用的库函数是wriet（），内核中对应的库函数就是sys_write()
+#### 2.2.2.2 stub函数自动生成的原理
+* Windows中，stub函数NtReadFile()函数在ntdll.dll中，实际上0x2e系统调用的stub函数都在这个DLL中，显然所有系统调用stub函数都有相同的样式，不同的是系统调用号和参数个数不同，所以ReactOS用一个工具来自动生成这些stub函数，这个工具的代码在msvc6/iface/native/genntdll.c,下面是一个片段
+    ![](./images/2019-12-13-14-49-10.png)
+    ![](./images/2019-12-13-14-49-25.png)
+
+    * 这段代码根据name、nr_args、sys_call_idx等参数为给定系统调用生成stub函数的汇编代码。name这些参数是如何来的？在ReactOS代码中，reactos/tools/nci目录中有个文件sysfuncs.lst,下面是从这个文件中摘取来的几行：
+        ```
+        NtAcceptConnectPort 6 
+        NtAccessCheck 8 
+        NtAccessCheckAndAuditAlarm 11 
+        NtAddAtom 3
+        ...... 
+        NtClose 1 
+        ...... 
+        NtReadFile 9 
+        ......
+        ```
+        * 这里的NtAcceptConnectPort就是调用号为0的系统调用NtAcceptConnectPort(),它有6个参数，另一个系统调用NtClose（）只有1个参数，而NtReadFile（）有9个参数，并且正好是表中第153行，所以调用号是152
+
+#### 2.2.2.3 int0x2e中断向量
+* 和别的中断向量一样，ReactOS在其函数初始化程序KeInitExceptions()中设置了int0x2e中断向量，这个函数代码在reactos/ntoskrnl/ke/i386/exp.c中：
+![](./images/2019-12-13-15-06-21.png)
+![](./images/2019-12-13-15-07-05.png)
+    
