--- Auto-Git Commit ---

--- a/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
+++ b/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
@@ -95,4 +95,13 @@ BOOL WINAPI ReadFile(HANDLE, PVOID, DWORD, PDWORD, LPOVERLAPPED);
 * 和别的中断向量一样，ReactOS在其函数初始化程序KeInitExceptions()中设置了int0x2e中断向量，这个函数代码在reactos/ntoskrnl/ke/i386/exp.c中：
 ![](./images/2019-12-13-15-06-21.png)
 ![](./images/2019-12-13-15-07-05.png)
-    
+
+* 显然int 0x2e的向量指向KiSystemService()。ReactOS在其内核函数命名和定义上也力求和Windows一致，所以ReactOS内核中也有前缀为ke和ki的函数。
+    * 前缀ke表示属于”内核“模块，注意Windows说的”内核kernel“只是内核的一部分，而不是整个内核（后面Wine也会说明）
+    * 前缀ki则是内核中与中断响应和处理有关的函数
+        * KiSystemServic()是一段汇编程序，其作用相当于Linux内核中的system_call()，这段代码在reactos/ntoskrnl/ke/i386/syscall.S
+
+* 下面分析
+
+    ![](./images/2019-12-13-15-27-15.png)
+    ![](./images/2019-12-13-15-27-33.png)
