--- Auto-Git Commit ---

--- a/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
+++ b/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
@@ -101,7 +101,34 @@ BOOL WINAPI ReadFile(HANDLE, PVOID, DWORD, PDWORD, LPOVERLAPPED);
     * 前缀ki则是内核中与中断响应和处理有关的函数
         * KiSystemServic()是一段汇编程序，其作用相当于Linux内核中的system_call()，这段代码在reactos/ntoskrnl/ke/i386/syscall.S
 
-* 下面分析
+* 下面分析_KiSystemService函数
 
     ![](./images/2019-12-13-15-27-15.png)
     ![](./images/2019-12-13-15-27-33.png)
+    * 前面主要是为了保存现场，类似Linux内核中宏操作SAVE_ALL
+    * 这里关键一步是%fs:KPCR_CURRENT_THREAD 这个地址取得当前线程的指针并将其存放在寄存器%esi中
+        * 每个线程在内核中都有个KTHREAD的数据结构，某种意义上相当于Linux内核中的进程控制块task_struct.
+        *  Windows 内核中也有进程控制块，但是只相当于把进程中各个线程共享的数据块剥离出来，而线程控制块则起着更加重要作用
+        * 所谓当前线程指针就是指向当前线程的KTHREAD数据结构指针。当内核调度一个线程时，就会将该地址fun放在%fs:KPCR_CURRENT_THREAD，%fs地址固定存放在PCR_SELECTOR这个地址中（定义为0x30）。
+        * 总之当前%esi指向当前线程的KTHREAD数据结构，这对系统调用有着重要作用
+
+* 分析 KTHREAD数据结构
+    ![](./images/2019-12-13-15-42-13.png)
+    * 每个成分后面注释说明成分在数据结构中的相对位移，ServiceTable相对位移是0xdc,这个指针也是我们最为关注的，因为它直接和系统调用函数表相关，每个线程的该指针都会指向SSDT_ENTRY结构数组，每个线程都有这个指针，那么说明每个线程都可以有自己的ServiceTable。但是实际上，每个线程的ServiceTable都会指向同一份数据结构
+
+* 继续分析逻辑代码（ServiceTable等会分析）
+    ![](./images/2019-12-13-15-51-55.png)
+    ![](./images/2019-12-13-15-52-14.png)
+    ![](./images/2019-12-13-15-52-30.png)
+    ![](./images/2019-12-13-15-52-48.png)
+    * 这里面关注最后一段，首先KTHREAD_SERVICE_TABLE（%esi）就是当前线程ServiceTable指针，KTHREAD_SERVICE_TABLE定义为0xdc：
+        ```
+        #define KTHREAD_SERVICE_TABLE 0xDC
+        ```
+* Service table
+    * 前面描述ServiceTable指针指向同一个数据结构，那就是KeServiceDescriptionTable[]:
+        ![](./images/2019-12-13-16-00-07.png)
+        
+    * 这个数组大小一般是4，但是只用了前2个元素，这里只用了第一个元素，这就是Windows常规系统调用跳转表
+    * Windows在发展过程中，把原来许多实现在用户空间功能（主要是图形界面操作）移入到内核空间，并称为一个单独内核模块win32k.sys，并添加相应一组”扩充系统调用“。这里第二个元素就是为扩充系统调用准备，但是源代码中这个元素是空的，这是因为win32k.sys是可以动态安装的，安装了以后把具体的数据结构指针填进去
+    * 扩从系统调用和常规系统调用区别是：前者系统调用大于0x1000,后者小于
