--- Auto-Git Commit ---

--- a/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
+++ b/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
@@ -9,6 +9,9 @@
             - [2.2.2.1 用户空间也存在NtReadFile函数](#2221-用户空间也存在ntreadfile函数)
             - [2.2.2.2 stub函数自动生成的原理](#2222-stub函数自动生成的原理)
             - [2.2.2.3 int0x2e中断向量](#2223-int0x2e中断向量)
+            - [2.2.2.4 _KiSystemService函数](#2224-_kisystemservice函数)
+            - [2.2.2.5 KTHREAD数据结构](#2225-kthread数据结构)
+            - [2.2.2.6 复制用户栈参数并进行系统调用](#2226-复制用户栈参数并进行系统调用)
 
 <!-- /TOC -->
 # 1. 背景
@@ -101,6 +104,7 @@ BOOL WINAPI ReadFile(HANDLE, PVOID, DWORD, PDWORD, LPOVERLAPPED);
     * 前缀ki则是内核中与中断响应和处理有关的函数
         * KiSystemServic()是一段汇编程序，其作用相当于Linux内核中的system_call()，这段代码在reactos/ntoskrnl/ke/i386/syscall.S
 
+#### 2.2.2.4 _KiSystemService函数
 * 下面分析_KiSystemService函数
 
     ![](./images/2019-12-13-15-27-15.png)
@@ -112,6 +116,8 @@ BOOL WINAPI ReadFile(HANDLE, PVOID, DWORD, PDWORD, LPOVERLAPPED);
         * 所谓当前线程指针就是指向当前线程的KTHREAD数据结构指针。当内核调度一个线程时，就会将该地址fun放在%fs:KPCR_CURRENT_THREAD，%fs地址固定存放在PCR_SELECTOR这个地址中（定义为0x30）。
         * 总之当前%esi指向当前线程的KTHREAD数据结构，这对系统调用有着重要作用
 
+
+#### 2.2.2.5 KTHREAD数据结构
 * 分析 KTHREAD数据结构
     ![](./images/2019-12-13-15-42-13.png)
     * 每个成分后面注释说明成分在数据结构中的相对位移，ServiceTable相对位移是0xdc,这个指针也是我们最为关注的，因为它直接和系统调用函数表相关，每个线程的该指针都会指向SSDT_ENTRY结构数组，每个线程都有这个指针，那么说明每个线程都可以有自己的ServiceTable。但是实际上，每个线程的ServiceTable都会指向同一份数据结构
@@ -132,3 +138,18 @@ BOOL WINAPI ReadFile(HANDLE, PVOID, DWORD, PDWORD, LPOVERLAPPED);
     * 这个数组大小一般是4，但是只用了前2个元素，这里只用了第一个元素，这就是Windows常规系统调用跳转表
     * Windows在发展过程中，把原来许多实现在用户空间功能（主要是图形界面操作）移入到内核空间，并称为一个单独内核模块win32k.sys，并添加相应一组”扩充系统调用“。这里第二个元素就是为扩充系统调用准备，但是源代码中这个元素是空的，这是因为win32k.sys是可以动态安装的，安装了以后把具体的数据结构指针填进去
     * 扩从系统调用和常规系统调用区别是：前者系统调用大于0x1000,后者小于
+    * 上线代码也是这么做的，把系统调用号副本（在%edi中）左移动8位，然后再跟0x10相与就起到区分两种系统调用
+    * 于是指令addl KTHREAD_SERVICE_TABLE（%esi），%edi就是使得寄存器指向了相应跳转表结构，也就是SSDT_ENTRY数据结构
+    * 数据结构的第三个成分NUMBER_OF_SYSCALLS,说明在函数跳转表中有几个指针，也就是所允许的最大系统调用号，对常规系统调用，这个数是232，比win2k略少
+
+####  2.2.2.6 复制用户栈参数并进行系统调用
+* 获取参数起始地址和个数
+    ![](./images/2019-12-13-16-16-22.png)
+    * 开始检查系统调用号是否在合法的方位之内，比较的就是NUMBER_OF_SYSCALLS（位置是8）
+    * 前面讲过寄存器edx指向用户空间堆栈上函数调用框架，实际上就是指向传递参数，现在讲指针复制到esi中，这是为用户空间堆栈复制做准备，但是完成还需要复制参数长度，这个信息保存在一个系统调用号为下标的无符号字节数组中（每个系统调用参数总长不能超过255字节），SSD_ENTRY数据结构第三个成分（相对位移12，0xc）就是指向这个数组指针，对常规系统调用，这个数组是MainSSPT，可想而知，这个数组内容也是来自前面所说的sysfuncs.list
+    * 代码中显然ecx指向MainSSPT，在和eax系统调用号相加，就是其指向数组中相应元素。movb指令就是把这个字节取出来，所以ecx持有给定系统调用参数复制长度
+    * 从esp内容中减去ecx内容，就在系统空间保留若干字节，长度等于参数复制长度
+
+* 开始复制参数，并进行系统调用
+![](./images/2019-12-13-16-36-40.png)
+![](./images/2019-12-13-16-36-50.png)
