--- Auto-Git Commit ---

--- a/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
+++ b/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
@@ -12,6 +12,7 @@
             - [2.2.2.4 _KiSystemService函数](#2224-_kisystemservice函数)
             - [2.2.2.5 KTHREAD数据结构](#2225-kthread数据结构)
             - [2.2.2.6 复制用户栈参数并进行系统调用](#2226-复制用户栈参数并进行系统调用)
+- [3. 注意部分](#3-注意部分)
 
 <!-- /TOC -->
 # 1. 背景
@@ -151,5 +152,26 @@ BOOL WINAPI ReadFile(HANDLE, PVOID, DWORD, PDWORD, LPOVERLAPPED);
     * 从esp内容中减去ecx内容，就在系统空间保留若干字节，长度等于参数复制长度
 
 * 开始复制参数，并进行系统调用
-![](./images/2019-12-13-16-36-40.png)
-![](./images/2019-12-13-16-36-50.png)
+    ![](./images/2019-12-13-16-36-40.png)
+    ![](./images/2019-12-13-16-36-50.png)
+    * 前面寄存器edi指向常规系统调用SSDT_ENTRY数据结构，也就指向该数据结构第一个成分
+    * SSDT_ENTRY数据结构的第一个成分是指针，指向一个函数数组指针数据，对常规系统调用就是MainSSDT
+        ![](./images/2019-12-13-16-41-48.png)
+    * 在我们这个例子中，指令movl （%edi,%eax,4）,把edi相对位移乘以4然后填入eax，使得eax指向NtReadFile，其代码在reactos/ntoskrnl/io/rw.c
+    * 最后返回值要返回到用户空间中，因此eax持有的值mov 到堆栈框架中
+
+    * 接着开始进行参数复制，并且call 函数
+        * NtReadFile()函数定义和用户空间ReadFile（）定义基本相同
+        ![](./images/2019-12-13-16-46-20.png)
+* 以上就是ReactOS系统调用全部过程
+
+
+# 3. 注意部分
+* 代码中APC指的是”异步过程调用“，相当于Linux中的signal
+* Windows把内核分为若干级，
+    * 最高级别是不允许硬件中断（不允许级别更低的硬件中断）
+    * 其次（2，1）是不允许进程调度（但是允许硬件中断），DPC(2级，相当于bh函数)和APC（1级相当于signal）都允许在禁止调度的条件下执行
+    * 最低（0级）就是允许进程调度
+
+* 从内核中也可以通过_kiSystemService()进行系统调用（不过要经过一个内核版本的sub函数），所以代码中需要检测和区分CPU进入_kiSystemService()之前的运行模式，并且线程KTHREAD数据结构中也有成分PreviousModle。而KTHREAD_PREVIOUS_MODE(%esi)就只想当前进程的PreviousMode
+
