--- a/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
+++ b/linux kernal/Wine/漫谈兼容内核--毛德操/1. ReactOS 怎样实现系统调用.md
@@ -13,6 +13,8 @@
             - [2.2.2.5 KTHREAD数据结构](#2225-kthread数据结构)
             - [2.2.2.6 复制用户栈参数并进行系统调用](#2226-复制用户栈参数并进行系统调用)
 - [3. 注意部分](#3-注意部分)
+    - [3.1 系统调用返回](#31-系统调用返回)
+- [4. 总结](#4-总结)
 
 <!-- /TOC -->
 # 1. 背景
@@ -175,3 +177,16 @@ BOOL WINAPI ReadFile(HANDLE, PVOID, DWORD, PDWORD, LPOVERLAPPED);
 
 * 从内核中也可以通过_kiSystemService()进行系统调用（不过要经过一个内核版本的sub函数），所以代码中需要检测和区分CPU进入_kiSystemService()之前的运行模式，并且线程KTHREAD数据结构中也有成分PreviousModle。而KTHREAD_PREVIOUS_MODE(%esi)就只想当前进程的PreviousMode
 
+## 3.1 系统调用返回
+![](./images/2019-12-13-17-22-07.png)
+![](./images/2019-12-13-17-22-19.png)
+![](./images/2019-12-13-17-22-37.png)
+![](./images/2019-12-13-17-22-49.png)
+Linux在返回用户空间前应该调用进程（线程调度函数），作者期望在上面代码中看到类似操作，但是作者并没有看到，但是实际上这样操作深藏在KfLowerIrql中了
+
+# 4. 总结
+搞懂这个函数后我们就要明白Wine要怎么做了，Wine不是要将KiSystemService与Linux的system_call堆积在一起，并列在一起，而是要将前者融入到后者中。
+
+即使照搬KiSystemService(),总不能因为程序使用了KfLowerIrql()有把KfLowerIrql照搬，这样最后势必要把ReactOS堆积在Linux内核中去
+
+wine就是要借鉴ReactOS内核实现，然后研究如何融合把其嫁接在Linux中去，其工作量可想而知
