--- a/编程语言/golang/go 程序语言设计--艾伦/5.函数.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/5.函数.md
@@ -1,7 +1,6 @@
 <!-- TOC -->
 
 - [1. 函数声明](#1-函数声明)
-- [2. 文件使用](#2-文件使用)
 
 <!-- /TOC -->
 
@@ -10,4 +9,4 @@
 
 * Go 语言中没有默认参数的概念，也不能制定实参名，除了文档说明之外，形参的返回值的命名不会对调用方有任何影响
 
-# 2. 文件使用
+* 实参是按值传递的，所以函数接收到的每个实参副本，修改函数的形参变量并不会影响调用者提供的实参。但是提供的实参包含引用类型，比如指针、slice、map、函数、通道
