--- a/编程语言/golang/go 程序语言设计--艾伦/8. goruntine 和通道.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/8. goruntine 和通道.md
@@ -1,9 +1,21 @@
 <!-- TOC -->
 
 - [1. 背景](#1-背景)
+- [2. goroutine](#2-goroutine)
+- [2. 通道](#2-通道)
 
 <!-- /TOC -->
 # 1. 背景
 * GO 有两种并发编程风格
     * 这一章展示goroutine 和channel，他们支持通信顺序进程（Communication Sequential Process,CSP）,CSP 是一个并发模式，在不同的执行体（goroutine）之间传递值，但是变量本身局限于单一执行体
-    * 
+    * 第九章涵盖一些共享内存的多线程模型，他们和其它语言中使用的线程类似
+
+# 2. goroutine
+* 在go中一个并发执行的活动称为goroutine
+* goroutine和线程在数量上有非常大的区别，这将在9.8节中讨论
+* 当主干goroutine main结束时，所有的goroutine都暴力终结，然后程序退出。
+* 除了从main返回或者程序退出外，没有程序化的方法让一个goroutine停止另一个。但是我们可以使用通信让一个goroutine要求自己停止
+
+
+# 2. 通道
+
