--- Auto-Git Commit ---

--- a/编程语言/golang/go 程序语言设计--艾伦/8. goruntine 和通道.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/8. goruntine 和通道.md
@@ -18,4 +18,16 @@
 
 
 # 2. 通道
+* 通道是一个特定类型的导管，叫做通道元素类型，比如一个int类型的通道写成chan int
+    ```
+        ch:= make(chan int) //ch 的使用类型是chan int
+    ```
 
+* 通道复制的是引用，这样调用者和被调用者都是引用同一份数据结构。
+* 同一类型的通道可以使用==符号进行比较，当两者都是统一通道数据类型引用时，比较值为true
+
+* 通道主要有两个操作:send 、receive，两者统称为通信，send 语句从一个goroutine传输一个值到另外一个执行接受式的gorountine
+![](./images/2019-12-19-16-46-40.png)
+
+* 通道支持第三个操作：close，它设置一个标志位来表示当前已经发送完毕，这个通道后面没有值了
+    * 关闭后的发送操作将导致宕机，在一个已经关闭的通道上进行接受操作，将获取已发送的所有值，直到通道是空
