--- a/docker/2. 常见问题.md
+++ b/docker/2. 常见问题.md
@@ -9,7 +9,7 @@ echo '{ "insecure-registries":["k8s.gcr.io","gcr.io","quay.io"] }' > /etc/docker
 systemctl restart docker.service
 ```
 
-# 2. docker 镜像迁移
+# 2. docker 镜像默认路径迁移
 ## 2.1 问题描述
 之前在OpenStack虚机中搭建k8s，默认/目录挂载磁盘空间就50G，而docker images镜像一般都很大，时间久了之后，磁盘容量超过水位值，k8s开始杀pod。
 虽然调高了水位值短时间能避免杀pod，但是比较稳妥的方法是新挂载一块盘，然后迁移docker 文件。
@@ -41,3 +41,21 @@ Docker Root Dir: /var/lib/docker
     * docker info ，根路径是否发生变化
 * 确认镜像是否还存在
     * docker images
+
+
+# 3. docker 容器保存
+* docker commit container_id 镜像名称:版本
+
+```
+docker save sccl:lastv3 | bzip2 | \
+ssh root@10.5.8.234 'bunzip2 | docker load'
+docker save mpirun | bzip2 | \
+ssh root@10.5.8.63 'bunzip2 | docker load'
+```
+
+
+cmake3 -DDEFAULT_BUILD_TYPE=Release -DENABLE_LOG=OFF -DZMQ_ROOT=/usr -DPB_ROOT=/usr -DNCCL_ROOT=/mnt/lustre/share/platform/dep/nccl_2.3.7-1+cuda9.0_x86_64   -DCMAKE_INSTALL_PREFIX=/usr/local ..
+
+
+cmake3 -DCMAKE_INSTALL_PREFIX=/opt/sccl -DCMAKE_BUILD_TYPE=Release -DPB_ROOT=/usr/local/protobuf-2.5.0 -DZMQ_ROOT=/opt/zeromq-4.3.2 -DNCCL_ROOT=/usr/local/nccl_2.5.6-1/ .. \
+&& make install -j
