--- a/云计算/KubeBatch/基础概念/2.kube-batch概念和原理.md
+++ b/云计算/KubeBatch/基础概念/2.kube-batch概念和原理.md
@@ -1,6 +1,10 @@
 <!-- TOC -->
 
-- [1. 背景](#1-背景)
+- [1. kube-batch 架构](#1-kube-batch-架构)
+    - [1.1 Cache模块](#11-cache模块)
+    - [1.2 Session 模块](#12-session-模块)
+    - [1.3 Action模块](#13-action模块)
+    - [1.4 Plugin 模块](#14-plugin-模块)
 - [2. 简单例子](#2-简单例子)
     - [2.1 Job优先级设置(优先级设置是在同一个队列)](#21-job优先级设置优先级设置是在同一个队列)
     - [2.2 不同队列如何资源分配（加权平均）](#22-不同队列如何资源分配加权平均)
@@ -36,46 +40,59 @@
 - [8. monitor kube-batch](#8-monitor-kube-batch)
 
 <!-- /TOC -->
-# 1. 背景
-* kube-batch作为调度使用
+# 1. kube-batch 架构
+![](./images/2020-01-04-13-42-43.png)
+kube-batch 中有四个模块，分别是 Cache, Session, Plugin 和 Action。
+## 1.1 Cache模块
+* Cache 模块封装了对 API Server 节点、容器等对象的数据同步逻辑。K8s 的数据保存在分布式存储 etcd 中，所有对数据的查询和操作都通过调用 API Server 接口，而非直接操作 etcd。
+* 在调度时，需要集群中节点和容器的使用资源和状态等信息。Cache 模块通过调用 K8s 的 sdk，通过 watch 机制监听集群中节点、容器的状态变化，将信息同步到自己的数据结构中。
+* Cache 模块还封装了对 API server 接口的调用。比如 Cache.Bind 接口，会调用 API Server 的 Bind 接口，将容器绑定到指定节点上。
+* 在 kube-batch 中，只有 cache 模块需要和 API Server 交互，其他模块只需要调用 Cache 模块接口。
 
-By default, scheduler will read following default configuraion as scheduler-conf
-```
-actions: "allocate, backfill"
-tiers:
-- plugins:
-  - name: priority
-  - name: gang
-- plugins:
-  - name: drf
-  - name: predicates
-  - name: proportion
-  - name: nodeorder
-```
+## 1.2 Session 模块
+* 如图所示，Session 模块是将其他三个模块串联起来的模块。Kube-batch 在每个调度周期开始时，都会新建一个 Session 对象，这个 Session 初始化时会做以下操作：
+  * 调用 Cache.Snapshot 接口，将 Cache 中节点、任务和队列信息拷贝一份副本，之后在这个调度周期中使用这份副本进行调度。因为 Cache 的数据会不断变化，为了保持同个调度周期中的数据一致性，在一开始就拷贝一份副本。
+  * 将配置中的各个 plugin 初始化，然后调用 plugin 的 OnSessionOpen 接口。plugin 在 OnSessionOpen 中，会初始化自己需要的数据，并将一些回调函数注册到 session 中。
 
-* actions：is a list of actions that will be executed by kube-batch in order。In above example, allocate, backfill will be executed in order by kube-batch.
+plugin 可以向 Session 中注册的函数是：
+* order 类型策略
+  * jobOrderFns： 决定哪个训练任务优先被处理（调度、回收、抢占）。
+  * queueOrderFns：决定哪个训练队列优先被处理。
+  * taskOrderFns：决定任务中哪个容器优先被处理。
+  * nodeOrderFns： 当多个节点满足容器的调度要求时，优先选择哪个节点。
+* predicateFns： 判断某个节点是否满足容器的基本调度要求。比如容器中指定的节点的标签。
+* preemptableFns：  决定某个容器是否可以被抢占。
+* reclaimableFns ：决定某个容器是否可以被回收。
+* overusedFns： 决定某个队列使用的资源是否超过限额，是的话不再调度对队列中的任务。
+* jobReadyFns：判断某个任务是否已经准备好，可以调用 API Server 的接口将任务的容器调度到节点。
+* jobPipelinedFns ： 判断某个任务是否处于 Pipelined 状态。
+* jobValidFns： 判断某个任务是否有效。
 
-* plugins：is a list of plugins that will be used by related actions。
-    * if it fit plugins in high priority tier, the action will not go through the plugins in lower priority tiers.（优先匹配上面的plugins策略）
-    * In each tier, it's considered passed if all plugins are fitted in plugins.names.
 
-* multiple tiers for plugins is introduced into kube-batch, high priority jobs will take all resources it need; if priority equal, shares resource by DRF.
+plugin 不需要注册上面所有的函数，而是可以根据自己的需要，注册某几个函数。比如 Predict plugin 就只注册了 predicateFns 这个函数到 session 中。
 
-Currently, kube-batch supports
+## 1.3 Action模块
+初始化成功后，Kube-batch 会依次调用不同的 Action 的 Execute 方法，并将 Session 对象作为参数传入。在 Execute 中，会调用 session 的各种方法。这些方法，有些最终会调用到 Cache 的方法， 有些是调用 Plugin 注册的方法。
+Action 模块实现了具体的调度流程。现在有 4 个不同的 Action:
+* Allocate: 这个 Action 负责将还未调度的设置了资源限制（request、Limit）的容器调度到节点上。
+* Backfill: 这个 Action 负责将还未调度的的没设置资源限制的容器调度到节点上。
+* Reclaim: 这个 Action 负责将任务中满足回收条件的容器删除。
+* Preempt: 这个 Action 负责将任务中满足条件的容器抢占。
 
-* actions(调度器执行的动作)
-    * allocate
-    * backfill
-    * preempt
-    * reclaim
-* plugins(调度器调度策略因数)
-    * conformance
-    * drf
-    * gang
-    * nodeorder
-    * predicates
-    * priority
-    * proportion
+Action 实现了调度机制（mechanism），Plugin 实现了调度的不同策略（policy）。举个例子，在 Allocate 中，每次会从优先队列中找到一个容器进行调度，这是机制，是由 Action 决定的。而在优先队列中容器排序的策略，是调用了 session 的 TaskOrderFn 方法，这个方法会调用 Plugin 注册的方法，因此策略是由 Plugin 实现。这种机制和策略分离的软件设计，带来了很好的扩展性和灵活性。
+
+## 1.4 Plugin 模块
+Plugin 模块提供了一种可插拔的方式，向调度提供不同的策略的实现。
+
+如图所示，目前最新版本有 6 个 plugin，它们分别是:
+* drf: ：实现了 Dominant Resouce Fairenss 算法，这个算法能够有效对多种资源（cpu、memory、gpu) 进行调度。
+* gang：实现了 gang scheduling 的逻辑，即保证任务所需 worker 同时被启动。
+* predict：判断某个节点是否满足容器的基本要求。
+* priority： 根据容器和队列设置的 PriorityClass 决定容器和队列的优先级。
+* node order：决定满足调度要求的节点中，哪个节点优先被选择。
+* proportion： 根据队列设置的权重决定每个队列分配到的资源。
+
+
 
 # 2. 简单例子
 ```
