--- a/编程语言/golang/go 程序语言设计--艾伦/8. goruntine 和通道.md
+++ b/编程语言/golang/go 程序语言设计--艾伦/8. goruntine 和通道.md
@@ -3,6 +3,9 @@
 - [1. 背景](#1-背景)
 - [2. goroutine](#2-goroutine)
 - [2. 通道](#2-通道)
+    - [2.1 无缓冲区通道和缓冲区通道](#21-无缓冲区通道和缓冲区通道)
+        - [2.1.1 无缓冲区通道](#211-无缓冲区通道)
+        - [2.1.2 缓冲区通道](#212-缓冲区通道)
 
 <!-- /TOC -->
 # 1. 背景
@@ -31,3 +34,28 @@
 
 * 通道支持第三个操作：close，它设置一个标志位来表示当前已经发送完毕，这个通道后面没有值了
     * 关闭后的发送操作将导致宕机，在一个已经关闭的通道上进行接受操作，将获取已发送的所有值，直到通道是空
+
+## 2.1 无缓冲区通道和缓冲区通道
+通道可以创建无缓冲区通道和缓冲区通道。
+```
+ch:=make(chan int)//创建无缓冲区通道
+ch:=make(chan int 3)//创建容量为3的缓冲区通道
+```
+### 2.1.1 无缓冲区通道
+* 无缓冲通道上的发送操作会阻塞，直到gorouine对应通道上接受操作执行完毕。
+    * 使用缓冲区通道通信将导致接受和通信同步化，因此无缓冲区通道又称为同步缓冲区通道。
+* 通道可以用来连接不同gorouine，这样就起到管道的作用
+    
+### 2.1.2 缓冲区通道
+如下图所示，是创建一个容纳3个字符串的通道.
+```
+ch=make(chan string,3)
+```
+![](./images/2020-02-04-15-43-26.png)
+
+* 缓冲通道发送操作在尾部添加元素，接收操作在队首添加元素
+* 如果我们需要知道通道缓冲区容量，我们可以通过使用内置的cap函数获取
+    ```
+    fmt.Println(cap(ch))//3
+    ```
+* 可以使用内置函数len()获取通道缓冲区中元素个数。通常情况在，正常运行下通道元素个数会发生较大变化，因此价值不大。但是在错误诊断和性能优化方面有很大作用。
